--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,14 @@ name = "vmf"
 version = "0.1.0"
 edition = "2021"
 
+[[bench]]
+name = "versioninfo"
+harness = false
+
 [dependencies]
 chumsky = "0.10"
 memmap2 = "0.9"
 thiserror = "2.0"
+
+[dev-dependencies]
+criterion = "0.5"
