--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,15 @@ name = "vmf"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+chumsky = "0.10"
+logos = "0.15"
+memmap2 = "0.9"
+thiserror = "2.0"
+
+[dev-dependencies]
+criterion = "0.5"
+
 [[bench]]
 name = "versioninfo"
 harness = false
@@ -15,11 +24,7 @@ harness = false
 name = "visgroups"
 harness = false
 
-[dependencies]
-chumsky = "0.10"
-logos = "0.15"
-memmap2 = "0.9"
-thiserror = "2.0"
+[[bench]]
+name = "viewsettings"
+harness = false
 
-[dev-dependencies]
-criterion = "0.5"
