--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,18 +3,9 @@ name = "vmf"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
-chumsky = "0.10"
-logos = "0.15"
-memmap2 = "0.9"
-thiserror = "2.0"
-
-[dev-dependencies]
-criterion = "0.5"
-
 [[bench]]
-name = "versioninfo"
 harness = false
+name = "versioninfo"
 
 [[bench]]
 name = "color"
@@ -32,4 +23,19 @@ harness = false
 name = "side"
 harness = false
 
+[[bench]]
+name = "camera"
+harness = false
 
+[[bench]]
+name = "displacement"
+harness = false
+
+[dependencies]
+chumsky = "0.10"
+logos = "0.15"
+memmap2 = "0.9"
+thiserror = "2.0"
+
+[dev-dependencies]
+criterion = "0.5"
