--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,10 @@ harness = false
 name = "displacement"
 harness = false
 
+[[bench]]
+name = "cordon"
+harness = false
+
 [dependencies]
 chumsky = "0.10"
 logos = "0.15"
