--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,7 +60,8 @@ name = "world"
 harness = false
 
 [dependencies]
-chumsky = "0.10"
+chumsky = { version = "0.11", features = ["lexical-numbers"] }
+lexical-core = "0.8.5"
 logos = "0.15"
 thiserror = "2.0"
 
